basic/simple-microservice/deployment/app-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springbootapp
  name: springbootapp
  namespace: dev-apps
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: springbootapp
  sessionAffinity: None
  type: ClusterIP
